<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewRecipe"
    android:padding="16dp"
    android:background="@color/my_yellow_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/book_icon_64"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:text="Spaghette cu brocolii"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@color/my_yellow_light"
            app:cardCornerRadius="35dp"
            app:cardElevation="20dp">

            <!-- Duration and Servings-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:paddingBottom="8dp">
                <!-- Here add the time value -->
                <TextView
                    android:id="@+id/text_view_duration_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="10 minute"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="#000000">
                </TextView>

                <!-- Here add the portii value -->
                <TextView
                    android:id="@+id/text_view_servings_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_duration_value"
                    android:layout_alignParentEnd="true"
                    android:text="@string/Servings_VALUE_demo"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="#000000">
                </TextView>

                <!-- Duration is here-->
                <TextView
                    android:id="@+id/text_view_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_duration_ViewRecipe"
                    android:layout_toStartOf="@id/text_view_duration_value"
                    android:layout_alignParentStart="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="#000000"
                    android:textStyle="bold">
                </TextView>

                <!-- Time is here-->
                <TextView
                    android:id="@+id/text_view_portii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_duration"
                    android:text="@string/text_servings_ViewRecipe"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="#000000"
                    android:textStyle="bold">

                </TextView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!-- Ingredients -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@color/my_yellow_light"
            app:cardCornerRadius="35dp"
            app:cardElevation="20dp">

            <!-- Here add the Contact Details-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                >

                <!-- Duration is here-->
                <TextView
                    android:id="@+id/text_view_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Incrediente:"
                    android:layout_alignParentStart="true"
                    android:ellipsize="end"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/list_icon">
                </TextView>

                <!-- Time is here-->
                <TextView
                    android:id="@+id/text_view_ingredients_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_ingredients"
                    android:text="Incredient 1, incredient 2, altul mai unul si ai unul"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="#000000">

                </TextView>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- Recipe -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/my_yellow_light"
            app:cardElevation="20dp"
            app:cardCornerRadius="35dp">

            <!-- Recipe description is here-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                >

                <!-- Duration is here-->
                <TextView
                    android:id="@+id/text_view_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_descriere_ViewRecipe"
                    android:layout_alignParentStart="true"
                    android:ellipsize="end"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/description_icon">
                </TextView>

                <!-- Time is here-->
                <TextView
                    android:id="@+id/text_view_recipe_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_recipe"
                    android:text="@string/demo_reteta"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="#000000">
                </TextView>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>